# lectev

./: .envrc  .gitignore  .vale.ini  Cargo.nix  Cargo.toml  README.rst  dev.sh  flake.nix
.github/workflows/: test.yml
docs/: conf.py  index.rst
nix/: act.nix
src/: command.rs  config.rs  main.rs  utils.rs
src/commands/: jira.rs
src/commands/simulation/: import_csv.rs  run.rs
src/configs/: jira.rs
src/lib/: rest.rs
src/lib/jira/: api.rs  core.rs  native.rs  nativetocore.rs  times_in_flight.rs
src/lib/simulation/: convert_template.rs  external.rs  index.rs  internal.rs  rand_topo.rs
