[package]
name = "lectev"
version = "0.1.0"
authors = ["Eric B. Merritt <eric@merritt.tech>"]
edition = "2018"

[dependencies]
structopt = "0.3"
snafu = "0.6"
tokio = { version = "1.12", features = ["full", "process"] }
shellexpand = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
derive_more = "0.99"
tracing = "0.1"
tracing-appender = "0.1"
tracing-subscriber = "0.2"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
colored = "2"
reqwest = { version = "0.11", features = ["json"] }
features = "0.10.0"
bitflags = "1.2"
envy = "0.4"
chrono = { version = "0.4", features = ["serde"]}
backoff = {version = "0.3", features = ["tokio"]}
futures = "0.3"
url = { version = "2.2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13"
bdays = "0.1"
csv-async = {version = "1.1", features = ["tokio"]}
uom = {version = "0.31", features = ["use_serde"]}
